--- a/todo.txt
+++ b/todo.txt
@@ -56,4 +56,4 @@ Today
 7> edit the navbar 
     create report to generate various preset reports 
 
-add more info like parentunit,msn,med-category, msn, no of children, date of retirement in the soldier table 
+add more info like parent unit,mission option (complete, NA) , med-category (A or B or C or D or E), no of children, date of retirement in the soldier table 
